test/samples/invalid/ambiguous_binding2.invalid.sol
/// #invariant (let a := true in 0) == 0;
contract Foo {
}

